fixing page container alignment, marking staging

--- a/wp-content/themes/glp/src/styles/page.less
+++ b/wp-content/themes/glp/src/styles/page.less
@@ -36,11 +36,11 @@
 	}
 	.page-container {
 		position: relative;
-		margin: 0 0 2em;
 		padding: 0 0 5em;
 		background: white url('../img/logo-coda.png') bottom center no-repeat;
 		border-radius: @border-radius-large;
 		overflow: hidden;
+		margin: 0 auto;
 	}
 	.static-page-container {
 		margin-top: 2em;
